# RustAxum-Tutorial

./: README.md
anyhow-error-response/: Cargo.toml
anyhow-error-response/src/: main.rs
discord-oauth/: .env  Cargo.toml
discord-oauth/src/: main.rs
hello-world/: Cargo.toml
